# rust_guitar_app

./: .gitignore  BACKEND_MIGRATION_PLAN.md  CONSOLIDATION_SUMMARY.md  Cargo.toml  GEMINI.md  MIGRATION_TODO.md  PLAN_SVG_FRETBOARD_EXTENSION.md  README.md  README_new.md  Trunk.toml  XTASK_REFACTOR_SUMMARY.md  feature_ideas.md  index.html  input.css  package-lock.json  package.json  run_trunk.sh  tailwind.config.js  x
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/chatmodes/: prompt_engineer.chatmode.md
.github/instructions/: always.instructions.md  rs.instructions.md
.llm/: instructions.md
backend/: Cargo.toml
backend/src/: main.rs
example/: playground.rs
frontend/: .gitignore  Cargo.toml  Trunk.toml  tailwind.config.js
frontend/public/styles/: output.css  tailwind.css
frontend/src/: app.rs  lib.rs  main.rs
frontend/src/audio/: audio_manager.rs
frontend/src/components/: exercise_manager.rs  fret_range_selector.rs  metronome.rs  mod.rs  music_selectors.rs  musical_fretboard_config.rs  navbar.rs  practice_session.rs
frontend/src/fretboard/: base_model.rs  fretboard_model.rs  mod.rs  model.rs  with_notes_model.rs
frontend/src/models/: fretboard_base_model.rs  fretboard_model.rs  fretboard_trainer.rs  mod.rs  repository.rs  storage.rs
frontend/src/pages/: exercise_detail.rs  exercises.rs  fretboard_config_examples.rs  fretboard_dev.rs  fretboard_scale.rs  fretboard_trainer.rs  home.rs
scripts/: backend-only.sh  dev.sh  frontend-only.sh
shared/: Cargo.toml
shared/src/: lib.rs  utils.rs
shared/src/models/: exercise.rs  mod.rs
shared/src/music/: heptatonic_scales.rs  intervals.rs  notes.rs  scales.rs
src/: app.rs  fretboard.rs  fretboard_v2.rs  fretboard_view_helper.rs  lib.rs  main.rs  my_app.rs  note_enum.rs  notes.rs  types.rs
src/audio/: audio_manager.rs
src/components/: exercise_form.rs  exercise_manager.rs  fret_range_selector.rs  fretboard.rs  fretboard_config_examples.rs  fretboard_model.rs  fretboard_rework.rs  fretboard_scale_display.rs  fretboard_scale_selection.rs  fretboard_visual_config.rs  metronome.rs  mod.rs  music_selectors.rs  musical_fretboard_config.rs  navbar.rs  practice_session.rs  practice_timer.rs  svg_fretboard.rs  svg_fretboard_scale_display.rs  svg_fretboard_trainer.rs  svg_fretboard_with_notes.rs
src/components/exercises/: constants.rs  exercise_basic_fields.rs  exercise_detail.rs  exercise_form.rs  exercise_form_actions.rs  exercise_type_change_confirmation.rs  exercise_type_specific_fields.rs  mod.rs  position_preset_buttons.rs  practice_session.rs  (+2 more)
src/models/: exercise.rs  fretboard_model.rs  fretboard_trainer.rs  mod.rs  repository.rs  storage.rs
src/music/: heptatonic_scales.rs  intervals.rs  mod.rs  notes.rs  scales.rs
src/pages/: exercise_detail.rs  exercises.rs  fretboard.rs  fretboard_config_examples.rs  fretboard_next.rs  fretboard_playground.rs  fretboard_scale.rs  fretboard_trainer.rs  fretboard_viewer.rs  guitar_v1.rs  guitar_v2.rs  home.rs  mod.rs  not_found.rs  svg_fretboard.rs  svg_fretboard_scale.rs
style/: tailwind.css
xtask/: Cargo.toml
xtask/src/: commands.rs  config.rs  main.rs  tasks.rs
(+56 files in other folders)
