[package]
name = "rust_guitar_app"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ["console", "Storage", "Window"] }
js-sys = "0.3"
leptos = { version = "0.7.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
leptos-use = "0.15.6"
codee = "0.2.0"
rand = "0.9.0"
getrandom = { version = "0.3.1", features = ["wasm_js"] }
strum = "0.27.1"
strum_macros = "0.27.1"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "playground"
path = "example/playground.rs"
