[package]
name = "rust_guitar_app"
version = "0.1.0"
edition = "2021"

[dependencies]

console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = [
  "console",
  "Storage",
  "Window",
  "AudioContext",
  "AudioContextState",
  "OscillatorNode",
  "GainNode",
  "AudioNode",
  "AudioParam",
  "AudioDestinationNode",
  "OscillatorType",
] }
js-sys = "0.3"
leptos = { version = "0.8.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos-use = "0.16.2"
codee = "0.3.2"
rand = "0.9.2"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
strum = "0.27.2"
strum_macros = "0.27.2"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
