[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }

# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# For development, we'll start with an in-memory store
# Later we can add database support
