[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
strum = "0.27.1"
strum_macros = "0.27.1"
rand = "0.9.0"

# For WASM compatibility
js-sys = { version = "0.3", optional = true }

# Optional leptos for frontend use
leptos = { version = "0.7.7", optional = true }

[features]
default = []
wasm = ["js-sys"]
leptos = ["dep:leptos"]
